welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:7: error: ')' expected but '}' found.
  }
  ^noTriples:8: error: ';' expected but 'else' found.
  else{
  ^